# example-onnx-cpp

./: .gitignore  CMakeLists.txt  inference.cpp  readme.md
model/: resnet18.py
